# Grapht

./: Cargo.toml  README.md  grapht.yml
docs/: cypher.ebnf  gql.ebnf
src/: errors.rs  grapht.rs  lib.rs  messages.rs  stats.rs
src/backends/: backend.rs  mod.rs
src/backends/redis_graph/: grammar.rs  mod.rs
src/connection/: api_endpoint.rs  listener_endpoint.rs  mod.rs  socket_endpoint.rs
src/data/: dataset.bak.rs  dataset.rs  index.rs  mod.rs  stats.rs  store.rs
src/gquery/: mod.rs
src/gquery/ast/: mod.rs
src/gquery/grammars/: mod.rs
src/grammars/: mod.rs
src/grammars/cypher/: mod.rs
src/model/: edge.rs  entity.rs  graph.rs  mod.rs  node.rs  path.rs
src/query/: mod.rs
src/store/: dataset.rs  edgeset.rs  index.rs  mod.rs  nodeset.rs  value.rs
src/utils/: diff.rs  mod.rs
tests/: test_dataset.rs  test_redis.rs
tests/common/: fhl.yml  invoicer  mod.rs
tests/common/invoicer/: graph.rs  mod.rs  organization.rs
